# tariff-watch

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  config.example.yaml  docker-compose.yml  pyproject.toml  railway.toml
sample_data/: hts_small_current.csv  hts_small_prev.csv
src/tariff_watch/: __init__.py  __main__.py  antidumping.py  api.py  cli.py  config.py  data_store.py  db.py  diff.py  email_notify.py  http.py  normalize.py  report.py  scheduler.py  schema.sql  snapshot.py  sources_amazon.py  sources_fedregister.py  sources_fx.py  sources_shipping.py  sources_usitc.py  tariff_overlay.py  trade_compliance.py
tests/: test_diff.py  test_normalize.py  test_report.py
